# sphero-r2d2

./: .gitignore  LICENSE  README.md  SPHEROV2_IMPROVEMENT_PLAN.md  fleet_database.json  pyproject.toml  requirements.txt
docs/: BLE_CHARACTERISTICS.md  R2D2_COMMANDS.md  R2D2_PROTOCOL.md  ROBOT-REPAIR-GUIDE.md  SDK_COMPARISON.md  SENSOR-PACK.md
examples/: test_v2_architecture.py
r2d2/: __init__.py  exceptions.py  fleet.py  robot.py  scanner.py
r2d2/adapter/: __init__.py  base.py  bleak_adapter.py
r2d2/components/: __init__.py  audio.py  base.py  dome.py  drive.py  leds.py  sensors.py  stance.py
r2d2/protocol/: __init__.py  constants.py  packet.py
tests/unit/: __init__.py  test_checksum.py  test_escape.py  test_packet_v2.py
tests/validation/: README.md  firmware_survey.py  r2d2_command_tests.py
